# quantum-mini-apps

./: .gitattributes  .gitignore  CITATION.cff  CircuitCutting.md  LICENSE  README.md  batch_submission.sh  batch_submission_array.sh  circuit_cutting.py  pyproject.toml  requirements.txt  setup.py
circuit_execution/: scale_qtasks_pilot_cpus.py  scale_qtasks_pilot_gpus.py
cluster/: DaskExecutor.py  dask_executor.py
distributed_state_vector_simulation/: dist_mem_jacobian.py  dist_mem_jacobian_results.csv  dist_mem_no_jacobian_results.csv  plot_results.py  pq_pennylane_dist_mem_with_backpropagation.py  pq_pennylane_dist_mem_without_backpropagation.py
docs/: CircuitExecution.md  StateVector.md
engine/cluster/: dask_executor.py
executor/: manager.py
mini-app-executor/: manager.py
mini-apps/: quantum_simulation_ce.py  quantum_simulation_ce_perlmutter.py  quantum_simulation_sv.py  quantum_simulation_sv_perlmutter.py
mini-apps/quantum-simulation/: ce_local.py  ce_perlmutter.py  result_ce_cpu.csv  sv_local.py  sv_perlmutter.py
miniappengine/: manager.py
miniappengine/cluster/: dask_executor.py
miniappengine/metrics/: csv_writer.py
miniappengine/motifs/: circuit_execution_motif.py  dist_state_vector_motif.py
motifs/: base_motif.py  circuit_execution_motif.py  dist_state_vector_motif.py  qiskit_benchmark.py
qma/mini_apps/qml_data_compression/: all_data.npy
qma/mini_apps/quantum_simulation/circuit_execution/: ce_local.py
qma/mini_apps/quantum_simulation/motifs/: circuit_cutting_motif.py  qiskit_benchmark.py
qma/mini_apps/quantum_simulation/statevector/: sv_perlmutter.py
scripts/: dask_client_slurm_test.py  launch_dask_on_slurm.py
src/: cut_estimator.py  execution_time_model.py  mock_aer_simulator.py  model_scale_test.py  test_cut_estimator.py  test_nisq_vs_cutting.py
src/engine/: manager.py
src/engine/base/: base_motif.py
src/engine/cluster/: base_executor.py  dask_executor.py  multi_pilot_quantum_executor.py  pilot_quantum_executor.py
src/engine/metrics/: csv_writer.py
src/mini_apps/: ce_multi_pq.py  gpu_circuit.py
src/mini_apps/circuit_optimization/: LICENSE  README.md  requirements.txt
src/mini_apps/circuit_optimization/Circuit-Cutting_Circuit-Optimization/: cc-dd.py
src/mini_apps/circuit_optimization/VQA/: vqa.py
src/mini_apps/circuit_optimization/VQA_Circuit-Optimization/: vqa-dd.py
src/mini_apps/classifier/: classifier.py
src/mini_apps/classifier/plots/: training_loop_data.csv
src/mini_apps/qml_classifier/: README.md  classifier.py  config.yml
src/mini_apps/qml_compression/: README.md  batch_submission_array.sh  qml_compression.py
src/mini_apps/qml_data_compression/: README.md  all_labels.npy  fashing_mnist.ipynb  mutli_node.py  qml_compression.py  tmp.py
src/mini_apps/qml_training/: README.md  qcbm_miniapp.py  qml_miniapp.py  qml_training_miniapp.py
src/mini_apps/quantum_simulation/: calibration.py  cc_local.py  ce_local.py  ce_perlmutter.py  ce_pilotquantum.py  cut_estimator.py  experiment_qdreamer.py
(+87 files in other folders)
